# IronizedZink

./: .gitignore  CHANGELOG.md  CREDITS.md  README.md  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/goydevv/ironizedzink/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ironized_gl.c  ironized_zink.c
app/src/main/java/com/goydevv/ironizedzink/: LoadingScreen.kt  MainActivity.kt  NativeLibs.kt  Presets.kt  RefreshRate.kt  SettingsRepository.kt  SetupScreen.kt  UpdateChecker.kt  UpdateDialog.kt  UpdateInstaller.kt
app/src/main/java/com/goydevv/ironizedzink/ui/theme/: Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/goydevv/ironizedzink/: ExampleUnitTest.kt
gradle/: libs.versions.toml
